--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -16,14 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
     "import torch.utils.data as data\n",
     "import torchvision\n",
     "import torchvision.transforms as transforms\n",
@@ -43,10 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# preprocessing\n",
@@ -71,24 +68,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class SimpleNet(nn.Module):\n",
     "# TODO:define model\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "    def __init__(self):\n",
+    "        super(SimpleNet, self).__init__()\n",
+    "        \n",
+    "        self.conv = nn.Sequential(\n",
+    "            nn.Conv2d(1, 16, 3, padding=1),\n",
+    "            nn.BatchNorm2d(16),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Conv2d(16, 64, 3, padding=1),\n",
+    "            nn.BatchNorm2d(64),\n",
+    "            nn.ReLU())\n",
+    "        \n",
+    "        self.fc = nn.Sequential(\n",
+    "            nn.Linear(28**2 *64,10))\n",
+    "        \n",
+    "    def forward(self,x):\n",
+    "        x = self.conv(x)\n",
+    "        x = x.view(x.shape[0],-1)\n",
+    "        x = self.fc(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def predict(self, x):\n",
+    "        outputs = self.forward(x)\n",
+    "        outputs = F.softmax(outputs,dim=1)\n",
+    "        return torch.argmax(outputs,dim=1)\n",
+    "    \n",
+    "    def score(self,data_loader):\n",
+    "        correct = 0.0\n",
+    "        total_num = 0.0\n",
+    "        \n",
+    "        for images, labels in train_loader:\n",
+    "            pred = self.predict(images)\n",
+    "            correct += (pred == labels).sum().item()\n",
+    "            total_num += images.shape[0]\n",
+    "        \n",
+    "        return correct/total_num\n",
+    "    \n",
     "    \n",
     "model = SimpleNet()\n",
     "\n",
     "# TODO:define loss function and optimiter\n",
-    "criterion = \n",
-    "optimizer = "
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)"
    ]
   },
   {
@@ -100,28 +127,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:46<00:00,  2.81it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 98.12%\n",
+      "Testing accuracy: 98.13%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:46<00:00,  2.81it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.18%\n",
+      "Testing accuracy: 99.17%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:48<00:00,  2.77it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.31%\n",
+      "Testing accuracy: 99.31%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:46<00:00,  2.81it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.54%\n",
+      "Testing accuracy: 99.56%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:47<00:00,  2.79it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.45%\n",
+      "Testing accuracy: 99.43%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:47<00:00,  2.79it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.71%\n",
+      "Testing accuracy: 99.69%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:46<00:00,  2.81it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.56%\n",
+      "Testing accuracy: 99.55%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:48<00:00,  2.78it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.79%\n",
+      "Testing accuracy: 99.80%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:42<00:00,  2.88it/s]\n",
+      "  0%|          | 0/468 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.54%\n",
+      "Testing accuracy: 99.55%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 468/468 [02:41<00:00,  2.90it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.81%\n",
+      "Testing accuracy: 99.83%\n"
+     ]
+    }
+   ],
    "source": [
     "# train and evaluate\n",
     "for epoch in range(NUM_EPOCHS):\n",
     "    for images, labels in tqdm(train_loader):\n",
     "        # TODO:forward + backward + optimize\n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "        outputs = model(images)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
     "        \n",
     "        \n",
     "    # evaluate\n",
     "    # TODO:calculate the accuracy using traning and testing dataset\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n"
+    "    train_accuracy = model.score(train_loader)\n",
+    "    test_accuracy = model.score(test_loader)\n",
+    "    print('Training accuracy: %0.2f%%' % (train_accuracy*100))\n",
+    "    print('Testing accuracy: %0.2f%%' % (test_accuracy*100))"
    ]
   },
   {
@@ -131,11 +320,39 @@
     "#### Q5:\n",
     "Please print the training and testing accuracy."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training accuracy: 99.82%\n",
+      "Testing accuracy: 99.82%\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_accuracy = model.score(train_loader)\n",
+    "test_accuracy = model.score(test_loader)\n",
+    "print('Training accuracy: %0.2f%%' % (train_accuracy*100))\n",
+    "print('Testing accuracy: %0.2f%%' % (test_accuracy*100))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
